@@ -1,3 +1,9 @@
+2003-07-16  Jonathan Larmour  <jifl@eCosCentric.com>
+
+	* src/ser_16x5x.c (CYG_IO_SERIAL_GENERIC_16X5X_INT_PRIORITY): Add
+	so that the calling hardware-specific drivers can override priorities.
+	Clarify flow control comment.
+
 2003-03-18  Gary Thomas  <gary@mlbassoc.com>
 
 	* src/ser_16x5x.c (pc_serial_set_config): 
